--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 				</div>
 			</section>
 			<section class="map-block">
-				<!-- <div class="map-overlay"></div> -->
 				<div id="map" class="map"></div>
 				<div class="map-title">Магазины, в которых проходит акция:</div>
 				<a href="#!" class="btn">Смотреть список адресов</a>
@@ -130,13 +129,13 @@
 						<div class="copyright">ООО «Мон’дэлис Русь». Часть группы компаний Mondelēz International. Все права защищены.</div>
 					</div>
 					<div class="footer-socials">
-						<a href="#!" target="_blank">
+						<a href="https://vk.com/alpengoldpromo" target="_blank">
 							<img src="img/vk.svg" alt="">
 						</a>
-						<a href="#!" target="_blank">
+						<a href="https://www.youtube.com/channel/UCLP4nuFgmLr4zs2xt2KGJYg" target="_blank">
 							<img src="img/yt.svg" alt="">
 						</a>
-						<a href="#!" target="_blank">
+						<a href="https://www.instagram.com/alpen_gold_ru/" target="_blank">
 							<img src="img/inst.svg" alt="">
 						</a>
 					</div>
