--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
 						</div>
 					</div>
 					<div class="slider-wrapper">
-						<div class="slider-title">Узнайте, в чём <br class="mobile-visible">польза экосумки. <br>Листайте карусель <br class="mobile-visible">из экопривычек:</div>
+						<div class="slider-title">Формируйте эко <br class="mobile-visible">привычки вместе <br>с Alpen Gold:</div>
 						<div class="eco-slider">
+							<div class="eco-slide">
+								<div class="eco-slide-img">
+									<img srcset="img/slider/slide3.jpg 1x, img/slider/slide3@2x.jpg 2x" alt="">
+								</div>
+							</div>
 							<div class="eco-slide">
 								<div class="eco-slide-img">
 									<img srcset="img/slider/slide1.jpg 1x, img/slider/slide1@2x.jpg 2x" alt="">
@@ -71,11 +76,6 @@
 							<div class="eco-slide">
 								<div class="eco-slide-img">
 									<img srcset="img/slider/slide2.jpg 1x, img/slider/slide2@2x.jpg 2x" alt="">
-								</div>
-							</div>
-							<div class="eco-slide">
-								<div class="eco-slide-img">
-									<img srcset="img/slider/slide3.jpg 1x, img/slider/slide3@2x.jpg 2x" alt="">
 								</div>
 							</div>
 							<div class="eco-slide">
